<resources>
    <string name="app_name">Spelling Game</string>
    <string name="begin">BEGIN!</string>
    <string name="confirm">Confirm choice!</string>
    <string name="score">0/20</string>
    <string name="start">5:00</string>
    <string name="correct">correct</string>
    <string name="incorrect">incorrect</string>
    <string name="skip">skip</string>
    <string name="game_over">Game Over!</string>
    <string name="splash_screen">Spelling Game</string>
</resources>
